<resources>
    <string name="app_name">Grape Sales</string>
    <string name="register">تسجيل جديد</string>
    <string name="password">كلمة المرور</string>
    <string name="confirmPassword">تأكيد كلمة المرور</string>
    <string name="mobile_number">رقم الهاتف أو المحمول</string>
    <string name="mobile_number_">رقم الهاتف أو المحمول:</string>
    <string name="login">تسجيل دخول</string>
    <string name="full_name">الاسم بالكامل</string>
    <string name="register_page">صفحة التسجيل</string>
    <string name="identity_number">رقم الهوية</string>
    <string name="main">الصفحة الرئيسية</string>
    <string name="error">خطأ</string>
    <string name="ok">موافق</string>
    <string name="confirm">تأكيد</string>
    <string name="cancel">إلغاء</string>
    <string name="info">معلومات</string>
    <string name="add_shop">أضف معرضك</string>
    <string name="shop_name">اسم المعرض</string>
    <string name="address_title">عنوان المعرض</string>
    <string name="offer_number">عدد العروض</string>
    <string name="_165">165</string>
    <string name="add_shop_title">إضافة معرض</string>
    <string name="shop_phone">هاتف المعرض</string>
    <string name="shop_bio">تفاصيل عن المعرض</string>
    <string name="shop_details">تفاصيل المعرض</string>
    <string name="add_offer">إضافة عرض</string>
    <string name="offer_name">اسم العرض</string>
    <string name="offer_bio">تفاصيل عن العرض</string>
    <string name="seqel">شيكل</string>
    <string name="_165_line"><strike>165</strike></string>
    <string name="seqel_line"><strike>شيكل</strike></string>
    <string name="previous_price">السعر قبل الخصم</string>
    <string name="next_price">السعر بعد الخصم</string>
    <string name="gaza">غزة</string>
    <string name="bitHanon">بيت\nحانون</string>
    <string name="bitHanona">بيت حانون</string>
    <string name="jabalia">جباليا</string>
    <string name="middle">الوسطى</string>
    <string name="khan_younis">خانيونس</string>
    <string name="rafah">رفح</string>
    <string name="cloth">أزياء</string>
    <string name="shops">محلات تجارية</string>
    <string name="house">أدوات منزلية</string>
    <string name="sport">أدوات رياضية</string>
    <string name="furth">أثاث\nمنزلي</string>
    <string name="furth_">أثاث منزلي</string>
    <string name="resturance">مطاعم</string>
    <string name="offer_details">تفاصيل العرض</string>
    <string name="order_from_us">أطلب عبرنا</string>
    <string name="back">رجوع</string>
    <string name="user">مشتري</string>
    <string name="marker">تاجر</string>
    <string name="select_user_type">أهلا وسهلا بك في تطبيق قطوف للعروض والتخفيضات يرجى منك اختيار صفتك الشخصية</string>
    <string name="update">تحديث</string>
    <string name="no_internet_connection">لا يوجد اتصال بالانترنت</string>
    <string name="required_field">هذا الحقل مطلوب</string>
    <string name="loading">تحميل…</string>
    <string name="update_successfully">تم تحديث بياناتك بنجاح</string>
    <string name="profile">الملف الشخصي</string>
    <string name="record_no">رقم السجل التجاري (اختياري)</string>
    <string name="you_should_attach_image_offer">يجب ارفاق صورة العرض</string>
    <string name="no_offers">لا يوجد عرض</string>
    <string name="no_shops">لا يوجد معارض</string>
    <string name="account_not_active">حسابك غير مفعل من قبل الادارة لاضافة معارض</string>
    <string name="deleviry_location">مكان التوصيل</string>
    <string name="note">ملاحظات</string>
    <string name="order_now">اطلب الآن</string>
    <string name="are_you_sure">هل أنت متأكد من طلب هذا العرض؟</string>
    <string name="correct_pass">كلمة المرور غير متطابقة</string>
    <string name="emailId">grapesalesapp@gmail.com</string>
    <string name="pas">farah2009</string>
    <string name="current_offer">عروض حصرية</string>
    <string name="you_should_least_3_images">يجب اختيار على الاكثر 3 صور للعرض</string>
    <string name="you_should_least_1_images">يبجب ارفاق صورة واحدة على الاقل عن العرض</string>
    <string name="add_image_for_offer">إضافة صور للعرض</string>
    <string name="search_page">صفحة البحث</string>
    <string name="category">التصنيف</string>
    <string name="city">المدينة</string>
    <string name="exhibtion">المعرض</string>
    <string name="exhibtion_">المعرض:</string>
    <string name="no_results">لا يوجد نتائج</string>
    <string name="you_should_attach_image_shop">يجب إرفاق صورة المعرض</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_orders">لا يوجد طلبات الآن</string>
    <string name="date">تاريخ الطلب</string>
    <string name="order">الطلبات</string>
    <string name="order_details">تفاصيل الطلب</string>
    <string name="user_name">اسم الزبون</string>
    <string name="mobile_number_user">رقم الهاتف أو المحمول لزبون</string>
    <string name="deleviry_done">تم التوصيل</string>
    <string name="dash">-</string>
    <string name="for_contact_us">للتواصل معنا:</string>
    <string name="for_contact">للتواصل</string>
    <string name="grapesalesapp_gmail_com">grapesalesapp@gmail.com</string>
    <string name="_970_599_411_474">+970 599 411 474</string>
    <string name="graps_note">تطبيق قطوف يجمع لك جميع التخفضيات في قطاع غزة … ولنعمل على خدمة أفضل يمكنك طلب العرض الذي تريد عبرنا .. رضاكم هدفنا</string>
    <string name="contact_us">اتصل بنا</string>
    <string name="rating">التقييم</string>
    <string name="rating_now">قيم الآن</string>
    <string name="thanks_for_rating">شكراً لتعاملكم معنا… يمكننك تقييم العرض الآن</string>
    <string name="rating_shop">ويمكننك تقييم المعرض الآن</string>
    <string name="delete_offer">حذف</string>
    <string name="select_category">يرجى اختيار التصنيف الذي ترغب برؤية عروضه</string>
    <string name="select_city">يرجى اختيار المدينة الذي ترغب برؤية عروضها</string>
    <string name="select_category_store">يرجى اختيار التصنيف الذي ترغب بإضافة معرضك فيه</string>
    <string name="select_city_store">يرجى اختيار المدينة الذي ترغب بإضافة معرضك فيه</string>
    <string name="already_done">طلبك في حالة التجهيز عند البائع ويمكنك التتبع من خلال صفحة طلباتك</string>
    <string name="order_status">حالة الطلب</string>
    <string name="agree_order">الموافقة على الطلب</string>
    <string name="reject_order">رفض الطلب</string>
    <string name="process_done">تم التجهيز</string>
    <string name="cancel_order">إلغاء الطلب</string>
    <string name="completed_order">اكتمال الطلب</string>
    <string name="select_delivery">اختيار ألية التوصيل</string>
    <string name="select_delivery_type">لقد قام التاجر بتجهيز طلبك الآن، يرجى منك اختيار الية التوصيل التي ترغب بها</string>
    <string name="devlivery_from_store">الاستلام من المحل مباشرة</string>
    <string name="use_delivery_service">استخدام خدمة التوصيل</string>
    <string name="delivery_type">ألية التوصيل</string>
    <string name="for_details">لمعرفة تفاصيل المعرض</string>
    <string name="press_here">اضغط هنا</string>
    <string name="seen_no">عدد المشاهدات</string>
    <string name="seen_no_">عدد المشاهدات:</string>
    <string name="update_version">تحديث</string>
    <string name="update_new_version">قم بتحديث النسخة من جوجل استور لتتمتع بالمميزات</string>
    <string name="update_now">حدث الآن</string>
    <string name="skip_register">تخطي التسجيل</string>
    <string name="have_code_invite_code">هل لديك كود من خلال دعوة صديق لك ادخله في مربع الحوار</string>
    <string name="enter_code_here">ادخل الكود هنا</string>
    <string name="more_browse">لتصفح المزيد اضغط هنا</string>
    <string name="start_offer">تاريخ بداية العرض</string>
    <string name="end_offer">تاريخ نهاية العرض</string>
    <string name="collect_points">اجمع نقاط</string>
    <string name="invite_firends">ادعو صديقك</string>
    <string name="invaitation_code_for_you">كود الدعوة الخاص بك</string>
    <string name="copy">نسخ</string>
    <string name="get_points">قطوف! أحصل على 3 نقاط عند دعوتك لاصدقاءك</string>
    <string name="user_name_aleady_found">اسم المستخدم موجود مسبقا</string>
    <string name="mobile_is_already_found">رقم الهاتف موجود مسبقا</string>
    <string name="your_points">نقاطك:</string>
    <string name="code">كود الدعوة</string>
    <string name="_0">0</string>
    <string name="username_password_wrong">اسم المستخدم او كلمة مرور خاطئين</string>
</resources>
