<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_white" />

        <RelativeLayout
            android:id="@+id/form_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo_layout"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/fullNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_gray_border"
                android:fontFamily="@font/droid_kufi_regular"
                android:gravity="center"
                android:hint="@string/full_name"
                android:inputType="text"
                android:padding="15dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/mobileEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fullNameEditText"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_gray_border"
                android:fontFamily="@font/droid_kufi_regular"
                android:gravity="center"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:padding="10dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mobileEditText"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_gray_border"
                android:fontFamily="@font/droid_kufi_regular"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/confirmPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordEditText"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_gray_border"
                android:fontFamily="@font/droid_kufi_regular"
                android:gravity="center"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="15sp" />

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/confirmPasswordEditText"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_border"
                android:fontFamily="@font/droid_kufi_bold"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>
