<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/droid_kufi_bold"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/update_version"
        android:textColor="@color/colorWhite"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/ratingOfferTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/droid_kufi_regular"
        android:gravity="center"
        android:text="@string/update_new_version"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <Button
        android:id="@+id/ratingBtn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ratingOfferTxt"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_grape_border"
        android:fontFamily="@font/droid_kufi_bold"
        android:text="@string/update_now"
        android:textColor="@color/colorPrimary" />

</RelativeLayout>