<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/backLayout"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center">

                <ImageView
                    android:id="@+id/ic_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_arrow_back_white_24dp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/registerTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/droid_kufi_bold"
                android:text="@string/collect_points"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolBar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/coverImage"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/app_name"
                android:scaleType="center"
                android:src="@drawable/money" />

            <RelativeLayout
                android:id="@+id/pointLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/coverImage"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/pointTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/droid_kufi_bold"
                    android:text="@string/your_points"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/pointNoTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/pointTxt"
                    android:background="@color/colorGray"
                    android:fontFamily="@font/droid_kufi_regular"
                    android:gravity="center|top"
                    android:text="@string/_0"
                    android:padding="10dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/getPoints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pointLayout"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/droid_kufi_bold"
                android:gravity="center"
                android:text="@string/get_points" />

            <TextView
                android:id="@+id/txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/getPoints"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/droid_kufi_regular"
                android:gravity="center"
                android:text="@string/invaitation_code_for_you" />

            <RelativeLayout
                android:id="@+id/codeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/codeTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_grape_solid_border"
                    android:fontFamily="@font/droid_kufi_regular"
                    android:gravity="center|top"
                    android:hint="@string/code"
                    android:padding="10dp"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/copyTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/codeTxt"
                    android:background="@color/colorGray"
                    android:fontFamily="@font/droid_kufi_regular"
                    android:gravity="center|top"
                    android:hint="@string/copy"
                    android:padding="10dp"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="15sp" />
            </RelativeLayout>

            <Button
                android:id="@+id/inviteBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/codeLayout"
                android:layout_margin="10dp"
                android:background="@drawable/bg_grape_border"
                android:fontFamily="@font/droid_kufi_bold"
                android:text="@string/invite_firends"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
